Layout, Navbar and colour updates.

--- a/ngunnawal.css
+++ b/ngunnawal.css
@@ -3,14 +3,40 @@ h1 {
     text-align: center;
 }
 
+body {
+    background-color: #ff0009;
+}
+
 .grid-container {
-    display:grid;
+    display: grid;
     grid-template-columns: auto auto; /* 2 column grid, auto size for width window*/
     grid-gap: 1em;
     padding: 1em;
 }
 
+.grid-container > div {
+    background-color: rgba(255,255,255, 0.2);
+}
+
 .full-width {
     grid-column-start: 1;
     grid-column-end: 3;
+}
+
+.navbar {
+    overflow: hidden;
+    background-color: #333333;
+}
+
+.navbar a {
+    float: left;
+    font-size: 1em;
+    color: white;
+    text-align: center;
+    padding: 1em 1em;
+    text-decoration: none;
+}
+
+.navbar a:hover {
+    background-color: #2ccbb4;
 }
