--- a/ngunnawal.css
+++ b/ngunnawal.css
@@ -3,10 +3,6 @@ h1 {
     text-align: center;
 }
 
-body {
-    background-color: #ff0009;
-}
-
 .grid-container {
     display: grid;
     grid-template-columns: auto auto; /* 2 column grid, auto size for width window*/
@@ -15,13 +11,20 @@ body {
 }
 
 .grid-container > div {
-    background-color: rgba(255,255,255, 0.2);
+    background-color: rgba(0,0,0, 0.2);
 }
 
 .full-width {
     grid-column-start: 1;
     grid-column-end: 3;
 }
+
+.main-content {
+    grid-row-start: 2;
+    grid-row-end: 4;
+}
+
+
 
 .navbar {
     overflow: hidden;
@@ -40,3 +43,7 @@ body {
 .navbar a:hover {
     background-color: #2ccbb4;
 }
+
+/*body {*/
+/*    background-color: #ff0009;*/
+/*}*/
