--- a/ngunnawal.css
+++ b/ngunnawal.css
@@ -45,6 +45,10 @@ body {
     text-decoration: none;
 }
 
+.navbar img {
+    margin-bottom:1em;
+}
+
 .navbar a:hover {
     background-color: #2ccbb4;
 }
